--- a/TAGPPI.ipynb
+++ b/TAGPPI.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# !pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "# !pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "# !pip install -q git+https://github.com/pyg-team/pytorch_geometric.git"
+   ],
+   "id": "c8d595da604a6de2"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-10T02:51:35.987860Z",
