--- a/PIPR.ipynb
+++ b/PIPR.ipynb
@@ -62,14 +62,14 @@
     "        self.bn3 = nn.BatchNorm1d((hidden_dim + 7) // 2)\n",
     "\n",
     "    def process_sequence(self, x):\n",
-    "        # x (N, F=13, L=2000)\n",
-    "        x = self.conv1(x)  # N, F=10, L=2000,\n",
-    "        x = self.pool(x)  # N, F=10, L= 666,\n",
-    "        x = x.permute(0, 2, 1)  # N, L=666, F=10\n",
-    "        gru_out, _ = self.gru1(x)  # N, L=666, F=20\n",
-    "        x = x.permute(0, 2, 1)  # N, F=10, L=666\n",
-    "        gru_out = gru_out.permute(0, 2, 1)  # N, F=20, L=666\n",
-    "        x = torch.cat([gru_out, x], dim=1)  # [8, 30, 666]\n",
+    "        # x (b, input_dim, 1500)\n",
+    "        x = self.conv1(x)  # b, hidden_dim, 1500,\n",
+    "        x = self.pool(x)  # b, hidden_dim, 500,\n",
+    "        x = x.permute(0, 2, 1)  # b, 500, hidden_dim\n",
+    "        gru_out, _ = self.gru1(x)  # b, 500, hidden_dim\n",
+    "        x = x.permute(0, 2, 1)  # b, hidden_dim, 500\n",
+    "        gru_out = gru_out.permute(0, 2, 1)  # b, hidden_dim, 500\n",
+    "        x = torch.cat([gru_out, x], dim=1)  # b, 3*hidden_dim, 500\n",
     "\n",
     "        x = self.conv2(x)\n",
     "        x = self.pool(x)\n",
@@ -77,7 +77,7 @@
     "        gru_out, _ = self.gru2(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        gru_out = gru_out.permute(0, 2, 1)\n",
-    "        x = torch.cat([gru_out, x], dim=1)  # [8, 30, 222]\n",
+    "        x = torch.cat([gru_out, x], dim=1)  # b, 3*hidden_dim, 166\n",
     "\n",
     "        x = self.conv3(x)\n",
     "        x = self.pool(x)\n",
@@ -85,7 +85,7 @@
     "        gru_out, _ = self.gru3(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        gru_out = gru_out.permute(0, 2, 1)\n",
-    "        x = torch.cat([gru_out, x], dim=1)  # [8, 30, 74]\n",
+    "        x = torch.cat([gru_out, x], dim=1)  # b, 3*hidden_dim, 55\n",
     "\n",
     "        x = self.conv4(x)\n",
     "        x = self.pool(x)\n",
@@ -93,7 +93,7 @@
     "        gru_out, _ = self.gru4(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        gru_out = gru_out.permute(0, 2, 1)\n",
-    "        x = torch.cat([gru_out, x], dim=1)  # [8, 30, 24]\n",
+    "        x = torch.cat([gru_out, x], dim=1)  # b, 3*hidden_dim, 18\n",
     "\n",
     "        x = self.conv5(x)\n",
     "        x = self.pool(x)\n",
@@ -101,15 +101,15 @@
     "        gru_out, _ = self.gru5(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        gru_out = gru_out.permute(0, 2, 1)\n",
-    "        x = torch.cat([gru_out, x], dim=1)  # [8, 30, 8]\n",
+    "        x = torch.cat([gru_out, x], dim=1)  # b, 3*hidden_dim, 6\n",
     "\n",
-    "        x = self.conv6(x)  # [8, 10, 8]\n",
+    "        x = self.conv6(x)  # b, hidden_dim, 6\n",
     "\n",
-    "        x = self.adaptive_pool(x).squeeze(-1)  # [8, 10]\n",
+    "        x = self.adaptive_pool(x).squeeze(-1)  # b, hidden_dim\n",
     "        return x\n",
     "\n",
     "    def forward(self, x1, x2):\n",
-    "        x1 = x1.permute(0, 2, 1)  # N, F, L\n",
+    "        x1 = x1.permute(0, 2, 1)\n",
     "        x1 = self.process_sequence(x1)\n",
     "\n",
     "        x2 = x2.permute(0, 2, 1)\n",
@@ -154,13 +154,13 @@
     "data_dir = \"drive/MyDrive/ppi-data\"\n",
     "train_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
     "val_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
-    "epochs = 50\n",
+    "epochs = 100\n",
     "\n",
     "embedding_h5 = os.path.join(data_dir, spe, \"seq/pipr.embedding.h5\")\n",
     "\n",
     "input_dim = 13\n",
     "hidden_dim = 26\n",
-    "batch_size = 8\n",
+    "batch_size = 32\n",
     "lr = 0.001\n",
     "\n",
     "set_seed(1234)\n",
