--- a/DeepFE-PPI.ipynb
+++ b/DeepFE-PPI.ipynb
@@ -110,7 +110,8 @@
     "\n",
     "# data_dir = \"ppi-data\"\n",
     "# train_file = os.path.join(data_dir, spe, \"action/train_action_20.tsv\")\n",
-    "# val_file = os.path.join(data_dir, spe, \"action/test_action_20.tsv\")\n",
+    "# val_file = os.path.join(data_dir, spe, \"action/val_action_10.tsv\")\n",
+    "# test_file = os.path.join(data_dir, spe, \"action/test_action_10.tsv\")\n",
     "# epochs = 10\n",
     "\n",
     "from google.colab import drive\n",
@@ -118,7 +119,8 @@
     "drive.mount('/content/drive')\n",
     "data_dir = \"drive/MyDrive/ppi-data\"\n",
     "train_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
-    "val_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
+    "val_file = os.path.join(data_dir, spe, \"action/val_action.tsv\")\n",
+    "test_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
     "epochs = 50\n",
     "\n",
     "embedding_h5 = os.path.join(data_dir, spe, \"seq/pipr.embedding.h5\")\n",
@@ -133,7 +135,8 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "train_loader = load_data(train_file, batch_size, embedding_h5, train=True)\n",
-    "val_loader = load_data(val_file, batch_size, embedding_h5, train=False)"
+    "val_loader = load_data(val_file, batch_size, embedding_h5, train=False)\n",
+    "test_loader = load_data(test_file, batch_size, embedding_h5, train=False)"
    ],
    "outputs": [],
    "execution_count": null
@@ -162,9 +165,7 @@
    "cell_type": "code",
    "id": "c809803e",
    "metadata": {},
-   "source": [
-    "eval_model(model, val_loader, device)"
-   ],
+   "source": "eval_model(model, test_loader, device)",
    "outputs": [],
    "execution_count": null
   }
