--- a/MyPPI-2.ipynb
+++ b/MyPPI-2.ipynb
@@ -145,7 +145,9 @@
     "\n",
     "# data_dir = \"ppi-data\"\n",
     "# train_file = os.path.join(data_dir, spe, \"action/train_action_20.tsv\")\n",
-    "# val_file = os.path.join(data_dir, spe, \"action/test_action_20.tsv\")\n",
+    "# val_file = os.path.join(data_dir, spe, \"action/val_action_10.tsv\")\n",
+    "# test_file = os.path.join(data_dir, spe, \"action/test_action_10.tsv\")\n",
+    "\n",
     "# epochs = 10\n",
     "\n",
     "from google.colab import drive\n",
@@ -153,7 +155,9 @@
     "drive.mount('/content/drive')\n",
     "data_dir = \"drive/MyDrive/ppi-data\"\n",
     "train_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
-    "val_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
+    "val_file = os.path.join(data_dir, spe, \"action/val_action.tsv\")\n",
+    "test_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
+    "\n",
     "epochs = 50\n",
     "\n",
     "embedding_h5 = os.path.join(data_dir, spe, \"seq/pipr.embedding.h5\")\n",
@@ -168,7 +172,8 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "train_loader = load_data(train_file, batch_size, embedding_h5, train=True)\n",
-    "val_loader = load_data(val_file, batch_size, embedding_h5, train=False)\n"
+    "val_loader = load_data(val_file, batch_size, embedding_h5, train=False)\n",
+    "test_loader = load_data(test_file, batch_size, embedding_h5, train=False)\n"
    ],
    "id": "84b2e4a4c2ec44e",
    "outputs": [],
@@ -196,7 +201,7 @@
    "source": [
     "train_model(model, train_loader, val_loader, optimizer, epochs, device)\n",
     "\n",
-    "eval_model(model, val_loader, device)"
+    "eval_model(model, test_loader, device)"
    ],
    "id": "fc703d4eedda3f4a",
    "outputs": [],
