--- a/TAGPPI.ipynb
+++ b/TAGPPI.ipynb
@@ -4,9 +4,14 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# !pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-    "# !pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-    "# !pip install -q git+https://github.com/pyg-team/pytorch_geometric.git"
+    "import os\n",
+    "import torch\n",
+    "os.environ['TORCH'] = torch.__version__\n",
+    "print(torch.__version__)\n",
+    "\n",
+    "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+    "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git"
    ],
    "id": "c8d595da604a6de2",
    "outputs": [],
@@ -114,7 +119,8 @@
     "\n",
     "class ConvLayer(nn.Module):\n",
     "    def __init__(self, embed_dim):\n",
-    "        super(ConvLayer, self).__init__()\n",
+    "        super().__init__()\n",
+    "\n",
     "        self.embed_dim = embed_dim\n",
     "        self.conv1 = nn.Conv1d(in_channels=self.embed_dim, out_channels=128,\n",
     "                               kernel_size=3)\n",
