--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -1,7 +1,12 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T10:24:10.177031Z",
+     "start_time": "2025-09-12T10:24:05.150395Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import os\n",
@@ -17,10 +22,15 @@
    ],
    "id": "e82e84cfffdc9f7c",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T10:24:10.203148Z",
+     "start_time": "2025-09-12T10:24:10.183804Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "class Featuring(nn.Module):\n",
@@ -173,10 +183,15 @@
    ],
    "id": "6b975059d40c90f4",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T10:24:11.092358Z",
+     "start_time": "2025-09-12T10:24:10.228544Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "\n",
@@ -214,8 +229,20 @@
     "test_loader = load_data(test_file, batch_size, embedding_h5, train=False)\n"
    ],
    "id": "84ce5d5029c81a17",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google.colab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 9\u001B[0m\n\u001B[0;32m      1\u001B[0m spe \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myeast\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# data_dir = \"ppi-data\"\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;66;03m# train_file = os.path.join(data_dir, spe, \"action/train_action_20.tsv\")\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;66;03m# val_file = os.path.join(data_dir, spe, \"action/val_action_10.tsv\")\u001B[39;00m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;66;03m# test_file = os.path.join(data_dir, spe, \"action/test_action_10.tsv\")\u001B[39;00m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;66;03m# epochs = 10\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m drive\n\u001B[0;32m     11\u001B[0m drive\u001B[38;5;241m.\u001B[39mmount(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/content/drive\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     12\u001B[0m data_dir \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdrive/MyDrive/ppi-data\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'google.colab'"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
