--- a/TAGPPI.ipynb
+++ b/TAGPPI.ipynb
@@ -303,8 +303,8 @@
     "        model.train()\n",
     "        g1 = g1.to(device)\n",
     "        g2 = g2.to(device)\n",
-    "        dmap1.to(device)\n",
-    "        dmap2.to(device)\n",
+    "        dmap1 = dmap1.to(device)\n",
+    "        dmap2 = dmap2.to(device)\n",
     "        y = y.to(device)\n",
     "\n",
     "        yhat = model(g1, dmap1, g2, dmap2)\n",
@@ -325,8 +325,8 @@
     "        for g1, dmap1, g2, dmap2, y in val_loader:\n",
     "            g1 = g1.to(device)\n",
     "            g2 = g2.to(device)\n",
-    "            dmap1.to(device)\n",
-    "            dmap2.to(device)\n",
+    "            dmap1 = dmap1.to(device)\n",
+    "            dmap2 = dmap2.to(device)\n",
     "            y = y.to(device)\n",
     "            yhat = model(g1, dmap1, g2, dmap2)\n",
     "            batch_loss = F.binary_cross_entropy(yhat, y)\n",
