--- a/DeepTrio.ipynb
+++ b/DeepTrio.ipynb
@@ -124,20 +124,20 @@
     "\n",
     "spe = \"yeast\"\n",
     "\n",
-    "data_dir = \"ppi-data\"\n",
-    "train_file = os.path.join(data_dir, spe, \"action/train_action_20.tsv\")\n",
-    "val_file = os.path.join(data_dir, spe, \"action/val_action_10.tsv\")\n",
-    "test_file = os.path.join(data_dir, spe, \"action/test_action_10.tsv\")\n",
-    "epochs = 10\n",
+    "# data_dir = \"ppi-data\"\n",
+    "# train_file = os.path.join(data_dir, spe, \"action/train_action_20.tsv\")\n",
+    "# val_file = os.path.join(data_dir, spe, \"action/val_action_10.tsv\")\n",
+    "# test_file = os.path.join(data_dir, spe, \"action/test_action_10.tsv\")\n",
+    "# epochs = 10\n",
     "\n",
-    "# from google.colab import drive\n",
-    "#\n",
-    "# drive.mount('/content/drive')\n",
-    "# data_dir = \"drive/MyDrive/ppi-data\"\n",
-    "# train_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
-    "# val_file = os.path.join(data_dir, spe, \"action/val_action.tsv\")\n",
-    "# test_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
-    "# epochs = 50\n",
+    "from google.colab import drive\n",
+    "\n",
+    "drive.mount('/content/drive')\n",
+    "data_dir = \"drive/MyDrive/ppi-data\"\n",
+    "train_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
+    "val_file = os.path.join(data_dir, spe, \"action/val_action.tsv\")\n",
+    "test_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
+    "epochs = 50\n",
     "\n",
     "embedding_h5 = os.path.join(data_dir, spe, \"seq/pipr.embedding.h5\")\n",
     "\n",
