--- a/TAGPPI.ipynb
+++ b/TAGPPI.ipynb
@@ -283,7 +283,7 @@
     "    collate_fn=collate\n",
     ")\n",
     "\n",
-    "model = GATPPI(emb_dim, output_dim, dropout)\n",
+    "model = GATPPI(emb_dim, output_dim, dropout).to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr)"
    ],
    "outputs": [],
