--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -1,12 +1,7 @@
 {
  "cells": [
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-12T10:24:10.177031Z",
-     "start_time": "2025-09-12T10:24:05.150395Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import os\n",
@@ -22,15 +17,10 @@
    ],
    "id": "e82e84cfffdc9f7c",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-12T10:24:10.203148Z",
-     "start_time": "2025-09-12T10:24:10.183804Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class Featuring(nn.Module):\n",
@@ -39,7 +29,13 @@
     "\n",
     "        self.feature_dim = feature_dim\n",
     "\n",
-    "        self.conv1 = nn.Conv1d(input_dim, feature_dim, kernel_size=3,\n",
+    "        self.proj = nn.Linear(input_dim, feature_dim)\n",
+    "\n",
+    "        layer0 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
+    "                                  ff_units=10, dropout=0.2)\n",
+    "        self.encoder0 = TransformerEncoder(layer0, n_layers=2)\n",
+    "\n",
+    "        self.conv1 = nn.Conv1d(feature_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
     "        layer1 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
     "                                  ff_units=10, dropout=0.2)\n",
@@ -70,6 +66,8 @@
     "        # self.adaptive_pool = nn.AdaptiveAvgPool1d(1)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        x = self.proj(x)\n",
+    "        x = self.encoder0(x)\n",
     "        x = x.permute(0, 2, 1)  # b, input_dim, 2000\n",
     "\n",
     "        # First layer\n",
@@ -183,15 +181,10 @@
    ],
    "id": "6b975059d40c90f4",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-12T10:24:11.092358Z",
-     "start_time": "2025-09-12T10:24:10.228544Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "\n",
@@ -210,7 +203,6 @@
     "train_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
     "val_file = os.path.join(data_dir, spe, \"action/val_action.tsv\")\n",
     "test_file = os.path.join(data_dir, spe, \"action/test_action.tsv\")\n",
-    "\n",
     "epochs = 50\n",
     "\n",
     "embedding_h5 = os.path.join(data_dir, spe, \"seq/pipr.embedding.h5\")\n",
@@ -229,20 +221,8 @@
     "test_loader = load_data(test_file, batch_size, embedding_h5, train=False)\n"
    ],
    "id": "84ce5d5029c81a17",
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'google.colab'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 9\u001B[0m\n\u001B[0;32m      1\u001B[0m spe \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myeast\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# data_dir = \"ppi-data\"\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;66;03m# train_file = os.path.join(data_dir, spe, \"action/train_action_20.tsv\")\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;66;03m# val_file = os.path.join(data_dir, spe, \"action/val_action_10.tsv\")\u001B[39;00m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;66;03m# test_file = os.path.join(data_dir, spe, \"action/test_action_10.tsv\")\u001B[39;00m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;66;03m# epochs = 10\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mgoogle\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcolab\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m drive\n\u001B[0;32m     11\u001B[0m drive\u001B[38;5;241m.\u001B[39mmount(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/content/drive\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     12\u001B[0m data_dir \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdrive/MyDrive/ppi-data\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'google.colab'"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
