--- a/KFold.ipynb
+++ b/KFold.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "    # 保存训练集和测试集\n",
     "    train_file = os.path.join(output_dir, f'train_fold_{fold + 1}.csv')\n",
-    "    test_file = os.path.join(output_dir, f'test_fold_{fold + 1}.csv')\n",
+    "    test_file = os.path.join(output_dir, f'val_fold_{fold + 1}.csv')\n",
     "\n",
     "    train_df.to_csv(train_file, header=None, index=False)\n",
     "    test_df.to_csv(test_file, header=None, index=False)\n"
