--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -29,13 +29,7 @@
     "\n",
     "        self.feature_dim = feature_dim\n",
     "\n",
-    "        self.proj = nn.Linear(input_dim, feature_dim)\n",
-    "\n",
-    "        layer0 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
-    "                                  ff_units=10, dropout=0.2)\n",
-    "        self.encoder0 = TransformerEncoder(layer0, n_layers=2)\n",
-    "\n",
-    "        self.conv1 = nn.Conv1d(feature_dim, feature_dim, kernel_size=3,\n",
+    "        self.conv1 = nn.Conv1d(input_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
     "        layer1 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
     "                                  ff_units=10, dropout=0.2)\n",
@@ -66,8 +60,6 @@
     "        # self.adaptive_pool = nn.AdaptiveAvgPool1d(1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.proj(x)\n",
-    "        x = self.encoder0(x)\n",
     "        x = x.permute(0, 2, 1)  # b, input_dim, 2000\n",
     "\n",
     "        # First layer\n",
