--- a/Embed.ipynb
+++ b/Embed.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8aa0341c",
    "metadata": {
     "ExecuteTime": {
@@ -9,20 +10,20 @@
      "start_time": "2025-08-30T14:43:18.441974Z"
     }
    },
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import torch\n",
-    "import h5py"
-   ],
-   "outputs": [],
-   "execution_count": 1
+    "import h5py\n",
+    "import random"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "fa827940f84f901c",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
    "source": [
     "class seq2tensor(object):\n",
     "    def __init__(self, filename):\n",
@@ -59,11 +60,11 @@
     "        elif len(rst) < seq_size:\n",
     "            return np.concatenate((rst, np.zeros((seq_size - len(rst), self.dim))))\n",
     "        return rst"
-   ],
-   "id": "fa827940f84f901c"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "c2290093",
    "metadata": {
     "ExecuteTime": {
@@ -71,24 +72,25 @@
      "start_time": "2025-08-30T14:44:32.318254Z"
     }
    },
+   "outputs": [],
    "source": [
-    "spe = \"yeast\"\n",
+    "spe = \"yeast1\"\n",
+    "\n",
+    "data_dir = \"ppi-data\"\n",
     "\n",
     "seed = 1234\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
     "\n",
-    "seq_file = os.path.join(spe, \"seq/protein.dictionary.tsv\")\n",
-    "emb_file = \"embedding/vec5_CTC.txt\"\n",
-    "action_file = os.path.join(spe, \"actions/protein.actions.tsv\")\n",
-    "embedding_h5 = os.path.join(spe, \"seq/pipr.embedding.h5\")\n",
-    "\n",
-    "torch.manual_seed(seed)\n",
-    "np.random.seed(seed)"
-   ],
-   "outputs": [],
-   "execution_count": 2
+    "seq_file = os.path.join(data_dir, spe, \"seq.tsv\")\n",
+    "emb_file = os.path.join(data_dir, \"embedding/vec5_CTC.txt\")\n",
+    "action_file = os.path.join(data_dir, spe, \"action.tsv\")\n",
+    "embedding_h5 = os.path.join(data_dir, spe, \"embedding.h5\")\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "6324149f",
    "metadata": {
     "ExecuteTime": {
@@ -96,6 +98,7 @@
      "start_time": "2025-08-30T14:44:34.769472Z"
     }
    },
+   "outputs": [],
    "source": [
     "seq2t = seq2tensor(emb_file)\n",
     "id2seq = {}\n",
@@ -118,9 +121,7 @@
     "                compression=\"lzf\",\n",
     "            )\n",
     "            dset[:] = x\n"
-   ],
-   "outputs": [],
-   "execution_count": 3
+   ]
   }
  ],
  "metadata": {
@@ -139,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
