--- a/KFold.ipynb
+++ b/KFold.ipynb
@@ -1,82 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ba44d16dcdea6ac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-12T12:48:11.538972Z",
      "start_time": "2025-09-12T12:48:11.530894Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "import random\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import KFold"
-   ],
-   "id": "1ba44d16dcdea6ac",
-   "outputs": [],
-   "execution_count": 12
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "961fd3b6a6c10f35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-12T12:48:11.668392Z",
      "start_time": "2025-09-12T12:48:11.581874Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
-    "spe = \"yeast\"\n",
+    "spe = \"yeast1\"\n",
+    "\n",
+    "seed = 1234\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
     "\n",
     "data_dir = \"ppi-data\"\n",
-    "\n",
     "output_dir = os.path.join(data_dir, spe, \"kfold\")\n",
+    "# output_dir = os.path.join(data_dir, spe, \"kfold_20\")\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
     "\n",
-    "data_file = os.path.join(data_dir, spe, \"action/train_action.tsv\")\n",
+    "data_file = os.path.join(data_dir, spe, \"action.tsv\")\n",
     "df = pd.read_csv(data_file, sep=\"\\t\", header=None)\n",
     "\n",
-    "k=5\n",
-    "shuffle=True\n",
-    "random_state=None\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=None)\n",
     "\n",
-    "kf = KFold(n_splits=k, shuffle=shuffle, random_state=random_state)\n",
-    "\n",
-    "for fold, (train_index, test_index) in enumerate(kf.split(df)):\n",
+    "for fold, (train_index, val_index) in enumerate(kf.split(df)):\n",
     "    train_df = df.iloc[train_index]\n",
-    "    test_df = df.iloc[test_index]\n",
+    "    val_df = df.iloc[val_index]\n",
     "\n",
-    "    # 保存训练集和测试集\n",
-    "    train_file = os.path.join(output_dir, f'train_fold_{fold + 1}.csv')\n",
-    "    test_file = os.path.join(output_dir, f'val_fold_{fold + 1}.csv')\n",
+    "    train_file = os.path.join(output_dir, f'train_fold_{fold + 1}.tsv')\n",
+    "    val_file = os.path.join(output_dir, f'val_fold_{fold + 1}.tsv')\n",
     "\n",
-    "    train_df.to_csv(train_file, header=None, index=False)\n",
-    "    test_df.to_csv(test_file, header=None, index=False)\n"
-   ],
-   "id": "961fd3b6a6c10f35",
-   "outputs": [],
-   "execution_count": 13
+    "    train_df.to_csv(train_file, sep=\"\\t\", header=None, index=False)\n",
+    "    val_df.to_csv(val_file, sep=\"\\t\", header=None, index=False)\n",
+    "    # train_df.head(20).to_csv(train_file, sep=\"\\t\", header=None, index=False)\n",
+    "    # val_df.head(20).to_csv(val_file, sep=\"\\t\", header=None, index=False)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "torch",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
