--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -242,6 +242,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f6eed34",
+   "metadata": {},
+   "source": [
+    "## Data loader"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6037e567",
@@ -391,12 +399,12 @@
     "    roc_auc_list.append(roc_auc)\n",
     "    pr_auc_list.append(pr_auc)\n",
     "\n",
-    "print(f\"Accuracy: {np.mean(acc_list):.4f} ± {np.std(acc_list):.4f}\")\n",
-    "print(f\"Precision: {np.mean(precision_list):.4f} ± {np.std(precision_list):.4f}\")\n",
-    "print(f\"Recall: {np.mean(recall_list):.4f} ± {np.std(recall_list):.4f}\")\n",
-    "print(f\"F1: {np.mean(f1_list):.4f} ± {np.std(f1_list):.4f}\")\n",
-    "print(f\"ROC AUC: {np.mean(roc_auc_list):.4f} ± {np.std(roc_auc_list):.4f}\")\n",
-    "print(f\"PR AUC: {np.mean(pr_auc_list):.4f} ± {np.std(pr_auc_list):.4f}\")"
+    "print(f\"Accuracy: {np.mean(acc_list)*100:.2f}±{np.std(acc_list)*100:.2f}\")\n",
+    "print(f\"Precision: {np.mean(precision_list)*100:.2f}±{np.std(precision_list)*100:.2f}\")\n",
+    "print(f\"Recall: {np.mean(recall_list)*100:.2f}±{np.std(recall_list)*100:.2f}\")\n",
+    "print(f\"F1: {np.mean(f1_list)*100:.2f}±{np.std(f1_list)*100:.2f}\")\n",
+    "print(f\"ROC AUC: {np.mean(roc_auc_list)*100:.2f}±{np.std(roc_auc_list)*100:.2f}\")\n",
+    "print(f\"PR AUC: {np.mean(pr_auc_list)*100:.2f}±{np.std(pr_auc_list)*100:.2f}\")"
    ]
   },
   {
@@ -551,12 +559,12 @@
     "    roc_auc_list.append(roc_auc)\n",
     "    pr_auc_list.append(pr_auc)\n",
     "\n",
-    "print(f\"Accuracy: {np.mean(acc_list):.4f} ± {np.std(acc_list):.4f}\")\n",
-    "print(f\"Precision: {np.mean(precision_list):.4f} ± {np.std(precision_list):.4f}\")\n",
-    "print(f\"Recall: {np.mean(recall_list):.4f} ± {np.std(recall_list):.4f}\")\n",
-    "print(f\"F1: {np.mean(f1_list):.4f} ± {np.std(f1_list):.4f}\")\n",
-    "print(f\"ROC AUC: {np.mean(roc_auc_list):.4f} ± {np.std(roc_auc_list):.4f}\")\n",
-    "print(f\"PR AUC: {np.mean(pr_auc_list):.4f} ± {np.std(pr_auc_list):.4f}\")"
+    "print(f\"Accuracy: {np.mean(acc_list)*100:.2f}±{np.std(acc_list)*100:.2f}\")\n",
+    "print(f\"Precision: {np.mean(precision_list)*100:.2f}±{np.std(precision_list)*100:.2f}\")\n",
+    "print(f\"Recall: {np.mean(recall_list)*100:.2f}±{np.std(recall_list)*100:.2f}\")\n",
+    "print(f\"F1: {np.mean(f1_list)*100:.2f}±{np.std(f1_list)*100:.2f}\")\n",
+    "print(f\"ROC AUC: {np.mean(roc_auc_list)*100:.2f}±{np.std(roc_auc_list)*100:.2f}\")\n",
+    "print(f\"PR AUC: {np.mean(pr_auc_list)*100:.2f}±{np.std(pr_auc_list)*100:.2f}\")"
    ]
   },
   {
@@ -678,12 +686,12 @@
     "    roc_auc_list.append(roc_auc)\n",
     "    pr_auc_list.append(pr_auc)\n",
     "\n",
-    "print(f\"Accuracy: {np.mean(acc_list):.4f} ± {np.std(acc_list):.4f}\")\n",
-    "print(f\"Precision: {np.mean(precision_list):.4f} ± {np.std(precision_list):.4f}\")\n",
-    "print(f\"Recall: {np.mean(recall_list):.4f} ± {np.std(recall_list):.4f}\")\n",
-    "print(f\"F1: {np.mean(f1_list):.4f} ± {np.std(f1_list):.4f}\")\n",
-    "print(f\"ROC AUC: {np.mean(roc_auc_list):.4f} ± {np.std(roc_auc_list):.4f}\")\n",
-    "print(f\"PR AUC: {np.mean(pr_auc_list):.4f} ± {np.std(pr_auc_list):.4f}\")"
+    "print(f\"Accuracy: {np.mean(acc_list)*100:.2f}±{np.std(acc_list)*100:.2f}\")\n",
+    "print(f\"Precision: {np.mean(precision_list)*100:.2f}±{np.std(precision_list)*100:.2f}\")\n",
+    "print(f\"Recall: {np.mean(recall_list)*100:.2f}±{np.std(recall_list)*100:.2f}\")\n",
+    "print(f\"F1: {np.mean(f1_list)*100:.2f}±{np.std(f1_list)*100:.2f}\")\n",
+    "print(f\"ROC AUC: {np.mean(roc_auc_list)*100:.2f}±{np.std(roc_auc_list)*100:.2f}\")\n",
+    "print(f\"PR AUC: {np.mean(pr_auc_list)*100:.2f}±{np.std(pr_auc_list)*100:.2f}\")"
    ]
   },
   {
@@ -818,12 +826,12 @@
     "    roc_auc_list.append(roc_auc)\n",
     "    pr_auc_list.append(pr_auc)\n",
     "\n",
-    "print(f\"Accuracy: {np.mean(acc_list):.4f} ± {np.std(acc_list):.4f}\")\n",
-    "print(f\"Precision: {np.mean(precision_list):.4f} ± {np.std(precision_list):.4f}\")\n",
-    "print(f\"Recall: {np.mean(recall_list):.4f} ± {np.std(recall_list):.4f}\")\n",
-    "print(f\"F1: {np.mean(f1_list):.4f} ± {np.std(f1_list):.4f}\")\n",
-    "print(f\"ROC AUC: {np.mean(roc_auc_list):.4f} ± {np.std(roc_auc_list):.4f}\")\n",
-    "print(f\"PR AUC: {np.mean(pr_auc_list):.4f} ± {np.std(pr_auc_list):.4f}\")"
+    "print(f\"Accuracy: {np.mean(acc_list)*100:.2f}±{np.std(acc_list)*100:.2f}\")\n",
+    "print(f\"Precision: {np.mean(precision_list)*100:.2f}±{np.std(precision_list)*100:.2f}\")\n",
+    "print(f\"Recall: {np.mean(recall_list)*100:.2f}±{np.std(recall_list)*100:.2f}\")\n",
+    "print(f\"F1: {np.mean(f1_list)*100:.2f}±{np.std(f1_list)*100:.2f}\")\n",
+    "print(f\"ROC AUC: {np.mean(roc_auc_list)*100:.2f}±{np.std(roc_auc_list)*100:.2f}\")\n",
+    "print(f\"PR AUC: {np.mean(pr_auc_list)*100:.2f}±{np.std(pr_auc_list)*100:.2f}\")"
    ]
   },
   {
@@ -840,12 +848,12 @@
     "# roc_auc_list = [0.9335, 0.9095, 0.9322, 0.9437, 0.7863]\n",
     "# pr_auc_list = [0.9016, 0.8877, 0.9108, 0.9215, 0.7083]\n",
     "\n",
-    "# print(f\"Accuracy: {np.mean(acc_list):.4f} ± {np.std(acc_list):.4f}\")\n",
-    "# print(f\"Precision: {np.mean(precision_list):.4f} ± {np.std(precision_list):.4f}\")\n",
-    "# print(f\"Recall: {np.mean(recall_list):.4f} ± {np.std(recall_list):.4f}\")\n",
-    "# print(f\"F1: {np.mean(f1_list):.4f} ± {np.std(f1_list):.4f}\")\n",
-    "# print(f\"ROC AUC: {np.mean(roc_auc_list):.4f} ± {np.std(roc_auc_list):.4f}\")\n",
-    "# print(f\"PR AUC: {np.mean(pr_auc_list):.4f} ± {np.std(pr_auc_list):.4f}\")\n"
+    "# print(f\"Accuracy: {np.mean(acc_list)*100:.2f}±{np.std(acc_list)*100:.2f}\")\n",
+    "# print(f\"Precision: {np.mean(precision_list)*100:.2f}±{np.std(precision_list)*100:.2f}\")\n",
+    "# print(f\"Recall: {np.mean(recall_list)*100:.2f}±{np.std(recall_list)*100:.2f}\")\n",
+    "# print(f\"F1: {np.mean(f1_list)*100:.2f}±{np.std(f1_list)*100:.2f}\")\n",
+    "# print(f\"ROC AUC: {np.mean(roc_auc_list)*100:.2f}±{np.std(roc_auc_list)*100:.2f}\")\n",
+    "# print(f\"PR AUC: {np.mean(pr_auc_list)*100:.2f}±{np.std(pr_auc_list)*100:.2f}\")\n"
    ]
   }
  ],
