--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -131,9 +131,9 @@
     "\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
+    "            y_true = []\n",
+    "            y_pred = []\n",
     "            batch_losses = []\n",
-    "            n = 0\n",
-    "            accuracy_average = 0\n",
     "            for x1, x2, y in val_loader:\n",
     "                x1 = x1.to(device)\n",
     "                x2 = x2.to(device)\n",
@@ -141,15 +141,16 @@
     "                yhat = model(x1, x2)\n",
     "                batch_loss = F.binary_cross_entropy(yhat, y)\n",
     "                batch_losses.append(batch_loss.item())\n",
-    "                accuracy = accuracy_score(y.cpu(), (yhat.cpu() > 0.5).int())\n",
-    "                accuracy_average = (accuracy_average * n + accuracy * x1.shape[\n",
-    "                    0]) / (n + x1.shape[0])\n",
-    "                n = n + x1.shape[0]\n",
+    "                y_true.append(y.cpu().numpy())\n",
+    "                y_pred.append(yhat.cpu().numpy())\n",
     "\n",
     "            val_loss = np.mean(batch_losses)\n",
     "            val_losses.append(val_loss)\n",
+    "            y_true = np.concatenate(y_true)\n",
+    "            y_pred = np.concatenate(y_pred)\n",
     "\n",
-    "        print(f\"Epoch: {epoch + 1} -- loss: {loss:.4f}, val_loss: {val_loss:.4f}, accuracy: {accuracy_average:.4f}\")\n",
+    "            acc, precision, recall, f1, roc_auc, pr_auc = calculate_metrics(y_true, y_pred)\n",
+    "            print(f\"Epoch: {epoch + 1} -- Loss: {loss:.4f}, Val_loss: {val_loss:.4f}, Accuracy: {acc:.4f}, Precision: {precision:.4f}, Recall: {recall:.4f}, F1: {f1:.4f}, ROC AUC: {roc_auc:.4f}, PR AUC: {pr_auc:.4f}\")\n",
     "\n",
     "    # plot_losses(losses, val_losses)\n",
     "\n",
