--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -260,7 +260,7 @@
     "spe = \"yeast1\"\n",
     "\n",
     "batch_size = 128\n",
-    "lr = 0.001\n",
+    "lr = 3e-4 # Karpathy Constant\n",
     "set_seed(1234)\n",
     "\n",
     "## local test\n",
@@ -275,7 +275,7 @@
     "drive.mount('/content/drive')\n",
     "data_dir = \"drive/MyDrive/ppi-data\"\n",
     "kfold_dir = \"kfold\"\n",
-    "epochs = 30\n",
+    "epochs = 50\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
@@ -301,34 +301,41 @@
     "    def __init__(self, seq_len, input_dim):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.lin1 = nn.Linear(seq_len * input_dim, 2048)\n",
-    "        self.bn1 = nn.BatchNorm1d(2048)\n",
-    "        self.lin2 = nn.Linear(2048, 1024)\n",
-    "        self.bn2 = nn.BatchNorm1d(1024)\n",
-    "        self.lin3 = nn.Linear(1024, 512)\n",
-    "        self.bn3 = nn.BatchNorm1d(512)\n",
-    "        self.lin4 = nn.Linear(512, 128)\n",
-    "        self.bn4 = nn.BatchNorm1d(128)\n",
+    "        self.ln1 = nn.Linear(seq_len * input_dim, 4096)\n",
+    "        self.bn1 = nn.BatchNorm1d(4096)\n",
+    "        self.ln2 = nn.Linear(4096, 2048)\n",
+    "        self.bn2 = nn.BatchNorm1d(2048)\n",
+    "        self.ln3 = nn.Linear(2048, 1024)\n",
+    "        self.bn3 = nn.BatchNorm1d(1024)\n",
+    "        self.ln4 = nn.Linear(1024, 512)\n",
+    "        self.bn4 = nn.BatchNorm1d(512)\n",
+    "        self.ln5 = nn.Linear(512, 128)\n",
+    "        self.bn5 = nn.BatchNorm1d(128)\n",
     "\n",
     "        self.relu = nn.ReLU()\n",
     "        self.dropout = nn.Dropout(0.5)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.lin1(x)\n",
+    "        x = self.ln1(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.bn1(x)\n",
     "        x = self.dropout(x)\n",
-    "        x = self.lin2(x)\n",
+    "        x = self.ln2(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.bn2(x)\n",
     "        x = self.dropout(x)\n",
-    "        x = self.lin3(x)\n",
+    "        x = self.ln3(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.bn3(x)\n",
     "        x = self.dropout(x)\n",
-    "        x = self.lin4(x)\n",
+    "        x = self.ln4(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.bn4(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.ln5(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.bn5(x)\n",
+    "\n",
     "        return x\n",
     "\n",
     "\n",
@@ -350,6 +357,7 @@
     "        x = self.fc2(x)\n",
     "        x = x.squeeze(-1)\n",
     "        x = F.sigmoid(x)\n",
+    "        \n",
     "        return x\n",
     "    \n",
     "\n",
