--- a/Embed.ipynb
+++ b/Embed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8aa0341c",
    "metadata": {
     "ExecuteTime": {
@@ -15,7 +15,7 @@
     "import os\n",
     "import numpy as np\n",
     "import h5py\n",
-    "import random"
+    "from util import set_seed"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c2290093",
    "metadata": {
     "ExecuteTime": {
@@ -74,13 +74,11 @@
    },
    "outputs": [],
    "source": [
-    "spe = \"yeast1\"\n",
+    "spe = \"rice\"\n",
     "\n",
     "data_dir = \"ppi-data\"\n",
     "\n",
-    "seed = 1234\n",
-    "np.random.seed(seed)\n",
-    "random.seed(seed)\n",
+    "set_seed(1234)\n",
     "\n",
     "seq_file = os.path.join(data_dir, spe, \"seq.tsv\")\n",
     "emb_file = os.path.join(data_dir, \"embedding/vec5_CTC.txt\")\n",
