--- a/KFold.ipynb
+++ b/KFold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ba44d16dcdea6ac",
    "metadata": {
     "ExecuteTime": {
@@ -13,15 +13,14 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import random\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import KFold"
+    "from sklearn.model_selection import KFold\n",
+    "from util import set_seed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "961fd3b6a6c10f35",
    "metadata": {
     "ExecuteTime": {
@@ -31,14 +30,13 @@
    },
    "outputs": [],
    "source": [
-    "spe = \"yeast1\"\n",
+    "spe = \"rice\"\n",
     "\n",
     "seed = 1234\n",
-    "np.random.seed(seed)\n",
-    "random.seed(seed)\n",
+    "set_seed(seed)\n",
     "\n",
     "data_dir = \"ppi-data\"\n",
-    "output_dir = os.path.join(data_dir, spe, \"kfold\")\n",
+    "output_dir = os.path.join(data_dir, spe, f\"kfold_{seed}\")\n",
     "# output_dir = os.path.join(data_dir, spe, \"kfold_20\")\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
