--- a/Find_epoch.ipynb
+++ b/Find_epoch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ca9792ac",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b73e39f6",
    "metadata": {},
    "outputs": [
@@ -28,36 +28,160 @@
       "DeepFE-PPI\n",
       "================================================================================\n",
       "\n",
-      "最优epoch: 49\n",
+      "最优epoch: 16\n",
       "--------------------------------------------------\n",
-      "综合评分: 0.9056\n",
+      "综合评分: 0.9469\n",
       "\n",
-      "平均准确率: 90.31 (±0.28)\n",
-      "平均精确率: 92.39 (±1.30)\n",
-      "平均召回率: 87.90 (±1.35)\n",
-      "平均F1分数: 90.07 (±0.33)\n",
-      "平均ROC AUC: 90.31 (±0.29)\n",
-      "平均PR AUC: 87.24 (±0.70)\n",
+      "平均准确率: 94.54 (±0.65)\n",
+      "平均精确率: 96.81 (±0.48)\n",
+      "平均召回率: 92.13 (±0.92)\n",
+      "平均F1分数: 94.41 (±0.70)\n",
+      "平均ROC AUC: 94.54 (±0.66)\n",
+      "平均PR AUC: 93.13 (±0.86)\n",
       "\n",
-      "平均验证损失: 0.5200\n",
+      "平均验证损失: 0.1724\n",
       "\n",
       "收敛分析:\n",
       "--------------------------------------------------\n",
       " fold  final_f1  stable_epoch  converged_early\n",
-      "    1    0.8973            11             True\n",
-      "    2    0.8930            11             True\n",
-      "    3    0.9041            12             True\n",
-      "    4    0.9056            11             True\n",
-      "    5    0.9034            14             True\n",
+      "    1    0.9441            11             True\n",
+      "    2    0.9358            11             True\n",
+      "    3    0.9489            11             True\n",
+      "    4    0.9439            11             True\n",
+      "    5    0.9397            11             True\n",
       "\n",
       "前5个最佳epoch:\n",
       "--------------------------------------------------\n",
       " epoch  composite_score  f1_mean  f1_std\n",
-      "    49          0.90560   0.9007  0.0033\n",
-      "    50          0.90522   0.9007  0.0053\n",
-      "    41          0.90434   0.9001  0.0055\n",
-      "    45          0.90372   0.8985  0.0047\n",
-      "    39          0.90354   0.8985  0.0061\n",
+      "    16          0.94695   0.9441  0.0070\n",
+      "    25          0.94694   0.9442  0.0048\n",
+      "    27          0.94673   0.9439  0.0068\n",
+      "    20          0.94650   0.9435  0.0047\n",
+      "    30          0.94611   0.9429  0.0048\n",
+      "\n",
+      "建议:\n",
+      "--------------------------------------------------\n",
+      "建议选择epoch 16 - 模型收敛较早，训练效率高\n",
+      "模型表现稳定，各折间方差小\n",
+      "\n",
+      "\n",
+      "================================================================================\n",
+      "DeepTrio\n",
+      "================================================================================\n",
+      "\n",
+      "最优epoch: 24\n",
+      "--------------------------------------------------\n",
+      "综合评分: 0.9205\n",
+      "\n",
+      "平均准确率: 91.77 (±0.56)\n",
+      "平均精确率: 95.50 (±0.57)\n",
+      "平均召回率: 87.69 (±1.51)\n",
+      "平均F1分数: 91.42 (±0.68)\n",
+      "平均ROC AUC: 91.77 (±0.56)\n",
+      "平均PR AUC: 89.90 (±0.53)\n",
+      "\n",
+      "平均验证损失: 0.2661\n",
+      "\n",
+      "收敛分析:\n",
+      "--------------------------------------------------\n",
+      " fold  final_f1  stable_epoch  converged_early\n",
+      "    1    0.9043            11             True\n",
+      "    2    0.9056            11             True\n",
+      "    3    0.9120            11             True\n",
+      "    4    0.8985            16             True\n",
+      "    5    0.9065            11             True\n",
+      "\n",
+      "前5个最佳epoch:\n",
+      "--------------------------------------------------\n",
+      " epoch  composite_score  f1_mean  f1_std\n",
+      "    24          0.92046   0.9142  0.0068\n",
+      "    17          0.91883   0.9113  0.0062\n",
+      "    28          0.91351   0.9064  0.0107\n",
+      "    29          0.91297   0.9077  0.0084\n",
+      "    21          0.91239   0.9029  0.0108\n",
+      "\n",
+      "建议:\n",
+      "--------------------------------------------------\n",
+      "建议选择epoch 24 - 模型收敛较早，训练效率高\n",
+      "模型表现稳定，各折间方差小\n",
+      "\n",
+      "\n",
+      "================================================================================\n",
+      "MyPPI\n",
+      "================================================================================\n",
+      "\n",
+      "最优epoch: 45\n",
+      "--------------------------------------------------\n",
+      "综合评分: 0.8960\n",
+      "\n",
+      "平均准确率: 89.44 (±1.00)\n",
+      "平均精确率: 89.85 (±2.50)\n",
+      "平均召回率: 89.05 (±1.98)\n",
+      "平均F1分数: 89.41 (±0.90)\n",
+      "平均ROC AUC: 89.43 (±1.00)\n",
+      "平均PR AUC: 85.45 (±1.74)\n",
+      "\n",
+      "平均验证损失: 0.3483\n",
+      "\n",
+      "收敛分析:\n",
+      "--------------------------------------------------\n",
+      " fold  final_f1  stable_epoch  converged_early\n",
+      "    1    0.8881            11             True\n",
+      "    2    0.8712            14             True\n",
+      "    3    0.8814            14             True\n",
+      "    4    0.8648            14             True\n",
+      "    5    0.8826            11             True\n",
+      "\n",
+      "前5个最佳epoch:\n",
+      "--------------------------------------------------\n",
+      " epoch  composite_score  f1_mean  f1_std\n",
+      "    45          0.89597   0.8941  0.0090\n",
+      "    48          0.89294   0.8903  0.0107\n",
+      "    40          0.89123   0.8877  0.0070\n",
+      "    26          0.89055   0.8872  0.0093\n",
+      "    43          0.88761   0.8835  0.0068\n",
+      "\n",
+      "建议:\n",
+      "--------------------------------------------------\n",
+      "建议选择epoch 45 - 模型在稳定期达到最佳性能\n",
+      "检测到可能的过拟合：最优epoch性能优于最终epoch 50\n",
+      "模型表现稳定，各折间方差小\n",
+      "\n",
+      "\n",
+      "================================================================================\n",
+      "PIPR\n",
+      "================================================================================\n",
+      "\n",
+      "最优epoch: 49\n",
+      "--------------------------------------------------\n",
+      "综合评分: 0.9035\n",
+      "\n",
+      "平均准确率: 90.10 (±0.70)\n",
+      "平均精确率: 92.71 (±3.22)\n",
+      "平均召回率: 87.25 (±3.24)\n",
+      "平均F1分数: 89.81 (±0.79)\n",
+      "平均ROC AUC: 90.12 (±0.69)\n",
+      "平均PR AUC: 87.20 (±1.63)\n",
+      "\n",
+      "平均验证损失: 0.3337\n",
+      "\n",
+      "收敛分析:\n",
+      "--------------------------------------------------\n",
+      " fold  final_f1  stable_epoch  converged_early\n",
+      "    1    0.8967            18             True\n",
+      "    2    0.8915            24             True\n",
+      "    3    0.8986            50            False\n",
+      "    4    0.8653            50            False\n",
+      "    5    0.8889            18             True\n",
+      "\n",
+      "前5个最佳epoch:\n",
+      "--------------------------------------------------\n",
+      " epoch  composite_score  f1_mean  f1_std\n",
+      "    49          0.90348   0.8981  0.0079\n",
+      "    47          0.89702   0.8932  0.0126\n",
+      "    48          0.89558   0.8883  0.0177\n",
+      "    46          0.89465   0.8878  0.0077\n",
+      "    45          0.89325   0.8852  0.0085\n",
       "\n",
       "建议:\n",
       "--------------------------------------------------\n",
@@ -66,125 +190,43 @@
       "\n",
       "\n",
       "================================================================================\n",
-      "DeepTrio\n",
+      "TF-PPI\n",
       "================================================================================\n",
       "\n",
-      "最优epoch: 18\n",
+      "最优epoch: 29\n",
       "--------------------------------------------------\n",
-      "综合评分: 0.9405\n",
+      "综合评分: 0.9218\n",
       "\n",
-      "平均准确率: 93.81 (±0.44)\n",
-      "平均精确率: 96.87 (±1.66)\n",
-      "平均召回率: 90.57 (±0.68)\n",
-      "平均F1分数: 93.60 (±0.42)\n",
-      "平均ROC AUC: 93.81 (±0.46)\n",
-      "平均PR AUC: 92.44 (±1.22)\n",
+      "平均准确率: 92.00 (±1.42)\n",
+      "平均精确率: 96.26 (±4.15)\n",
+      "平均召回率: 87.76 (±5.97)\n",
+      "平均F1分数: 91.60 (±1.74)\n",
+      "平均ROC AUC: 91.98 (±1.41)\n",
+      "平均PR AUC: 90.41 (±1.89)\n",
       "\n",
-      "平均验证损失: 0.2124\n",
+      "平均验证损失: 0.2603\n",
       "\n",
       "收敛分析:\n",
       "--------------------------------------------------\n",
       " fold  final_f1  stable_epoch  converged_early\n",
-      "    1    0.8332            13             True\n",
-      "    2    0.9346            11             True\n",
-      "    3    0.9434            11             True\n",
-      "    4    0.8392            30            False\n",
-      "    5    0.8916            13             True\n",
+      "    1    0.9324            50            False\n",
+      "    2    0.9313            19             True\n",
+      "    3    0.3925            38             True\n",
+      "    4    0.9416            50            False\n",
+      "    5    0.9299            50            False\n",
       "\n",
       "前5个最佳epoch:\n",
       "--------------------------------------------------\n",
       " epoch  composite_score  f1_mean  f1_std\n",
-      "    18          0.94050   0.9360  0.0042\n",
-      "    19          0.94041   0.9372  0.0057\n",
-      "    16          0.94037   0.9350  0.0035\n",
-      "    20          0.93719   0.9338  0.0085\n",
-      "    15          0.93628   0.9313  0.0053\n",
+      "    29          0.92184   0.9160  0.0174\n",
+      "    31          0.91856   0.9155  0.0383\n",
+      "    46          0.91545   0.9147  0.0190\n",
+      "    19          0.91370   0.9109  0.0199\n",
+      "    39          0.91180   0.9090  0.0466\n",
       "\n",
       "建议:\n",
       "--------------------------------------------------\n",
-      "建议选择epoch 18 - 模型收敛较早，训练效率高\n",
-      "检测到可能的过拟合：最优epoch性能优于最终epoch 30\n",
-      "模型表现稳定，各折间方差小\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "MyPPI\n",
-      "================================================================================\n",
-      "\n",
-      "最优epoch: 43\n",
-      "--------------------------------------------------\n",
-      "综合评分: 0.9500\n",
-      "\n",
-      "平均准确率: 95.01 (±0.90)\n",
-      "平均精确率: 95.46 (±1.24)\n",
-      "平均召回率: 94.51 (±0.84)\n",
-      "平均F1分数: 94.98 (±0.91)\n",
-      "平均ROC AUC: 95.00 (±0.91)\n",
-      "平均PR AUC: 92.96 (±1.42)\n",
-      "\n",
-      "平均验证损失: 0.2101\n",
-      "\n",
-      "收敛分析:\n",
-      "--------------------------------------------------\n",
-      " fold  final_f1  stable_epoch  converged_early\n",
-      "    1    0.9424            19             True\n",
-      "    2    0.9584            14             True\n",
-      "    3    0.9370            15             True\n",
-      "    4    0.9607            17             True\n",
-      "    5    0.9535            14             True\n",
-      "\n",
-      "前5个最佳epoch:\n",
-      "--------------------------------------------------\n",
-      " epoch  composite_score  f1_mean  f1_std\n",
-      "    43          0.94997   0.9498  0.0091\n",
-      "    50          0.94991   0.9504  0.0103\n",
-      "    48          0.94900   0.9492  0.0104\n",
-      "    45          0.94878   0.9493  0.0109\n",
-      "    44          0.94865   0.9488  0.0083\n",
-      "\n",
-      "建议:\n",
-      "--------------------------------------------------\n",
-      "建议选择epoch 43 - 模型在稳定期达到最佳性能\n",
-      "模型表现稳定，各折间方差小\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "PIPR\n",
-      "================================================================================\n",
-      "\n",
-      "最优epoch: 36\n",
-      "--------------------------------------------------\n",
-      "综合评分: 0.9503\n",
-      "\n",
-      "平均准确率: 94.90 (±1.14)\n",
-      "平均精确率: 97.83 (±1.75)\n",
-      "平均召回率: 91.90 (±3.74)\n",
-      "平均F1分数: 94.71 (±1.26)\n",
-      "平均ROC AUC: 94.91 (±1.14)\n",
-      "平均PR AUC: 93.92 (±0.84)\n",
-      "\n",
-      "平均验证损失: 0.1288\n",
-      "\n",
-      "收敛分析:\n",
-      "--------------------------------------------------\n",
-      " fold  final_f1  stable_epoch  converged_early\n",
-      "    1    0.9559            28             True\n",
-      "    2    0.9296            50            False\n",
-      "    3    0.8991            50            False\n",
-      "    4    0.9511            32             True\n",
-      "\n",
-      "前5个最佳epoch:\n",
-      "--------------------------------------------------\n",
-      " epoch  composite_score  f1_mean  f1_std\n",
-      "    36          0.95033   0.9471  0.0126\n",
-      "    48          0.94467   0.9424  0.0257\n",
-      "    47          0.94465   0.9420  0.0269\n",
-      "    49          0.94454   0.9436  0.0166\n",
-      "    39          0.94411   0.9446  0.0175\n",
-      "\n",
-      "建议:\n",
-      "--------------------------------------------------\n",
-      "建议选择epoch 36 - 模型在稳定期达到最佳性能\n",
+      "建议选择epoch 29 - 模型收敛较早，训练效率高\n",
       "检测到可能的过拟合：最优epoch性能优于最终epoch 50\n",
       "模型表现有一定波动，建议检查数据分布一致性\n",
       "\n",
@@ -193,8 +235,8 @@
     }
    ],
    "source": [
-    "spe = \"yeast1\"\n",
-    "models = [\"DeepFE-PPI\", \"DeepTrio\", \"MyPPI\", \"PIPR\"]\n",
+    "spe = \"yeast2\"\n",
+    "models = [\"DeepFE-PPI\", \"DeepTrio\", \"MyPPI\", \"PIPR\", \"TF-PPI\"]\n",
     "# model2epoch = {\"DeepTrio\" : 10}\n",
     "model2epoch = {}\n",
     "optimal_epochs = {}\n",
@@ -228,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9733fadd",
    "metadata": {},
    "outputs": [
@@ -237,10 +279,11 @@
      "output_type": "stream",
      "text": [
       "Model\tAccuracy\tPrecision\tRecall\tF1\tROC AUC\tPR AUC\tComposite Score\n",
-      "DeepFE-PPI\t90.31±0.28\t92.39±1.30\t87.90±1.35\t90.07±0.33\t90.31±0.29\t87.24±0.70\t0.9056\n",
-      "DeepTrio\t93.81±0.44\t96.87±1.66\t90.57±0.68\t93.60±0.42\t93.81±0.46\t92.44±1.22\t0.9405\n",
-      "MyPPI\t95.01±0.90\t95.46±1.24\t94.51±0.84\t94.98±0.91\t95.00±0.91\t92.96±1.42\t0.9500\n",
-      "PIPR\t94.90±1.14\t97.83±1.75\t91.90±3.74\t94.71±1.26\t94.91±1.14\t93.92±0.84\t0.9503\n"
+      "DeepFE-PPI\t94.54±0.65\t96.81±0.48\t92.13±0.92\t94.41±0.70\t94.54±0.66\t93.13±0.86\t0.9469\n",
+      "DeepTrio\t91.77±0.56\t95.50±0.57\t87.69±1.51\t91.42±0.68\t91.77±0.56\t89.90±0.53\t0.9205\n",
+      "MyPPI\t89.44±1.00\t89.85±2.50\t89.05±1.98\t89.41±0.90\t89.43±1.00\t85.45±1.74\t0.8960\n",
+      "PIPR\t90.10±0.70\t92.71±3.22\t87.25±3.24\t89.81±0.79\t90.12±0.69\t87.20±1.63\t0.9035\n",
+      "TF-PPI\t92.00±1.42\t96.26±4.15\t87.76±5.97\t91.60±1.74\t91.98±1.41\t90.41±1.89\t0.9218\n"
      ]
     }
    ],
