--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spe = \"yeast2\"\n",
+    "spe = \"rice\"\n",
     "\n",
     "batch_size = 128\n",
     "lr = 0.001\n",
@@ -52,7 +52,7 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "data_dir = \"drive/MyDrive/ppi-data\"\n",
-    "kfold_dir = \"kfold\"\n",
+    "kfold_dir = \"kfold_1234\"\n",
     "epochs = 50\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
