--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -62,112 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12f4c3ab",
-   "metadata": {},
-   "source": [
-    "## MyPPI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e66ad40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Featuring(nn.Module):\n",
-    "    def __init__(self, seq_len, input_dim):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.ln1 = nn.Linear(seq_len * input_dim, 2048)\n",
-    "        self.bn1 = nn.BatchNorm1d(2048)\n",
-    "        self.ln2 = nn.Linear(2048, 1024)\n",
-    "        self.bn2 = nn.BatchNorm1d(1024)\n",
-    "        self.ln3 = nn.Linear(1024, 512)\n",
-    "        self.bn3 = nn.BatchNorm1d(512)\n",
-    "        self.ln4 = nn.Linear(512, 128)\n",
-    "        self.bn4 = nn.BatchNorm1d(128)\n",
-    "\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.dropout = nn.Dropout(0.5)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.ln1(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.bn1(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.ln2(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.bn2(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.ln3(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.bn3(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.ln4(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.bn4(x)\n",
-    "\n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "class Classifier(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.fc1 = nn.Linear(128, 8)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.bn = nn.BatchNorm1d(8)\n",
-    "        self.dropout = nn.Dropout(0.5)\n",
-    "        self.fc2 = nn.Linear(8, 1)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.fc1(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.bn(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.fc2(x)\n",
-    "        x = x.squeeze(-1)\n",
-    "        x = F.sigmoid(x)\n",
-    "        \n",
-    "        return x\n",
-    "    \n",
-    "\n",
-    "class InteractionModel(nn.Module):\n",
-    "    def __init__(self, featuring, classifier):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.featuring = featuring\n",
-    "        self.classifier = classifier\n",
-    "\n",
-    "    def forward(self, x1, x2):\n",
-    "        x1 = torch.flatten(x1, start_dim=1)\n",
-    "        x2 = torch.flatten(x2, start_dim=1)\n",
-    "        x1 = self.featuring(x1)\n",
-    "        x2 = self.featuring(x2)\n",
-    "        x = x1 * x2\n",
-    "        x = self.classifier(x)\n",
-    "        return x\n",
-    "\n",
-    "for k in range(5):\n",
-    "    print(f\"Kfold: ======================== {k+1} ========================\")\n",
-    "    train_file = os.path.join(data_dir, spe, kfold_dir, f\"train_fold_{k+1}.tsv\")\n",
-    "    val_file = os.path.join(data_dir, spe, kfold_dir, f\"val_fold_{k+1}.tsv\")\n",
-    "    train_loader = load_data(train_file, batch_size, embedding_h5, train=True)\n",
-    "    val_loader = load_data(val_file, batch_size, embedding_h5, train=False)\n",
-    "    \n",
-    "    seq_len = 1500\n",
-    "    input_dim = 13\n",
-    "    featuring = Featuring(seq_len, input_dim)\n",
-    "    classifier = Classifier()\n",
-    "    model = InteractionModel(featuring, classifier).to(device)\n",
-    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
-    "\n",
-    "    train_model(model, train_loader, val_loader, optimizer, epochs, device)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5c7263d0",
    "metadata": {},
    "source": [
@@ -554,20 +448,20 @@
     "        self.conv1 = nn.Conv1d(input_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
     "        layer1 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
-    "                                  ff_units=10, dropout=0.2)\n",
-    "        self.encoder1 = TransformerEncoder(layer1, n_layers=2)\n",
+    "                                  ff_units=2*feature_dim, dropout=0.2)\n",
+    "        self.encoder1 = TransformerEncoder(layer1, n_layers=1)\n",
     "\n",
     "        self.conv2 = nn.Conv1d(2 * feature_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
     "        layer2 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
-    "                                  ff_units=10, dropout=0.2)\n",
-    "        self.encoder2 = TransformerEncoder(layer2, n_layers=2)\n",
+    "                                  ff_units=2*feature_dim, dropout=0.2)\n",
+    "        self.encoder2 = TransformerEncoder(layer2, n_layers=1)\n",
     "\n",
     "        self.conv3 = nn.Conv1d(2 * feature_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
     "        layer3 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
-    "                                  ff_units=10, dropout=0.2)\n",
-    "        self.encoder3 = TransformerEncoder(layer3, n_layers=2)\n",
+    "                                  ff_units=2*feature_dim, dropout=0.2)\n",
+    "        self.encoder3 = TransformerEncoder(layer3, n_layers=1)\n",
     "\n",
     "        self.conv4 = nn.Conv1d(2 * feature_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
@@ -622,7 +516,7 @@
     "                                 d_model=self.feature_dim,\n",
     "                                 ff_units=2*self.feature_dim,\n",
     "                                 dropout=0.5)\n",
-    "        self.encoder = TransformerEncoder(layer, n_layers=2)\n",
+    "        self.encoder = TransformerEncoder(layer, n_layers=1)\n",
     "\n",
     "        self.classifier = nn.Sequential(\n",
     "            nn.Linear(feature_dim, 2048),\n",
