--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spe = \"yeast1\"\n",
+    "spe = \"rice\"\n",
     "\n",
     "batch_size = 128\n",
     "lr = 0.001\n",
