--- a/Embed.ipynb
+++ b/Embed.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f2ac02e7",
+   "metadata": {},
+   "source": [
+    "# Amino acid embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d87ce48",
+   "metadata": {},
+   "source": [
+    "We uses a property-aware amino acid lexicon to embed proteins, where the vectors describe the protein sequences from two aspects.\n",
+    "The first part depicts the co-occurrence similarity of the amino acids, which is obtained by the pre-trained SkipGram model (Mikolov et al. 2013).\n",
+    "The second part depicts the similarity of electrostaticity and hydrophobicity among amino acids, where 20 amino acids are classified into 7 classes according to their dipoles and volumes of the side chains (Shen et al. 2007).\n",
+    "Consequently, each amino acid vector is represented as 13 dimensions (embedding/vec5_CTC.txt).\n",
+    "\n",
+    "References:\n",
+    "\n",
+    "Mikolov T, Sutskever I, Chen K, Corrado G, Dean J. Distributed representations\n",
+    "ofwords and phrases and their compositionality. Adv Neural Inf Process Syst\n",
+    "2013;vol. cs.CL:1–9.\n",
+    "Shen J, Zhang J, Luo X, Zhu W, Yu K, Chen K, et al. Predicting protein-protein\n",
+    "interactions based only on sequences information. Proc Natl Acad Sci U S A\n",
+    "2007;104:4337–41."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8aa0341c",
