--- a/KFold.ipynb
+++ b/KFold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1ba44d16dcdea6ac",
    "metadata": {
     "ExecuteTime": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "961fd3b6a6c10f35",
    "metadata": {
     "ExecuteTime": {
@@ -30,21 +30,21 @@
    },
    "outputs": [],
    "source": [
-    "spe = \"rice\"\n",
+    "spe = \"yeast2\"\n",
     "\n",
-    "seed = 1234\n",
+    "seed = 42\n",
     "set_seed(seed)\n",
     "\n",
     "data_dir = \"ppi-data\"\n",
-    "output_dir = os.path.join(data_dir, spe, f\"kfold_{seed}\")\n",
-    "# output_dir = os.path.join(data_dir, spe, \"kfold_20\")\n",
+    "output_dir = os.path.join(data_dir, spe, f\"kfold-{seed}\")\n",
+    "# output_dir = os.path.join(data_dir, spe, \"kfold_test\")\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
     "\n",
     "data_file = os.path.join(data_dir, spe, \"action.tsv\")\n",
     "df = pd.read_csv(data_file, sep=\"\\t\", header=None)\n",
     "\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=None)\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=seed)\n",
     "\n",
     "for fold, (train_index, val_index) in enumerate(kf.split(df)):\n",
     "    train_df = df.iloc[train_index]\n",
