--- a/ppi-data/reduce_ppi.ipynb
+++ b/ppi-data/reduce_ppi.ipynb
@@ -17,7 +17,14 @@
    "id": "6d779e1a",
    "metadata": {},
    "source": [
-    "## Download rice (Oryza sativa) PPI from STRING"
+    "## Download rice (Oryza sativa) PPI from STRING\n",
+    "\n",
+    "We download physical interaction pairs for *Oryza sativa* from the STRING database version 12, along with their full protein sequences.\n",
+    "Following the same strategy as PIPR (Cheng et al. 2019), we use CD-HIT (Fu et al., 2012) to decrease sequence redundancy of the datasets, in which two PPIs are considered similar if they share a sequence identity greater than 40%.\n",
+    "\n",
+    "References:\n",
+    "Chen,M. et al. (2019) Multifaceted protein–protein interaction prediction based on Siamese residual RCNN. Bioinformatics, 35, i305–i314.\n",
+    "Fu,L. et al. (2012) CD-HIT: accelerated for clustering the next-generation sequencing data. Bioinformatics, 28, 3150–3152"
    ]
   },
   {
